Fixed double border on selectize inputs

--- a/asap-custom-styles.css
+++ b/asap-custom-styles.css
@@ -891,6 +891,10 @@ blockquote cite {
     color: transparent;
   }
 }
+.selectize-input {
+    border: none;
+    border-radius: 8px;
+}
 
 label {
   color: var(--dark-blue) !important;
